--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,7 +33,7 @@ steps:
 
   # Namespace, if not default, has to be specified.
   - name: 'gcr.io/cloud-builders/kubectl'
-    args: ['set', 'image', 'deployment/ruudniewtv-stream-website', 'ruudniewtv-stream-website=eu.gcr.io/$PROJECT_ID/ruudniewtv-stream-website:$SHORT_SHA', '--namespace', '1001factory']
+    args: ['set', 'image', 'deployment/ruudniewtv-stream-website', 'ruudniewtv-stream-website=eu.gcr.io/$PROJECT_ID/ruudniewtv-stream-website:$SHORT_SHA', '--namespace', 'dutchdelhicacy']
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=europe-west4-a'
       - 'CLOUDSDK_CONTAINER_CLUSTER=factory'
